@@ -1,0 +1,18 @@
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<databaseChangeLog xmlns="http://www.liquibase.org/xml/ns/dbchangelog" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://www.liquibase.org/xml/ns/dbchangelog http://www.liquibase.org/xml/ns/dbchangelog/dbchangelog-2.0.xsd">
+    
+    <changeSet author="ghajba" id="pitfall" failOnError="false">
+        <dropSequence sequenceName="wrong_seq" />
+    </changeSet>
+    
+    <changeSet author="ghajba" id="pitfall2">
+        <createSequence sequenceName="wrong_seq" startValue="1" />
+    </changeSet>
+    
+    <changeSet author="ghajba" id="pitfall3" failOnError="false">
+        <dropSequence sequenceName="wrong_seq2" />
+        <createSequence sequenceName="wrong_seq2" startValue="1" />
+    </changeSet>
+    
+</databaseChangeLog> 
